syntax = "proto3";
import "google/protobuf/timestamp.proto";
package ports;
option go_package = "./internal/ports";

message BoolPtr {
  bool valid = 1;
  bool value = 2;
}

message Player {
  string email = 1;
  google.protobuf.Timestamp last_signed_in_at = 2;
}

message Event {
  int32 id = 1;
  int32 player_id = 2;
  int32 game_id = 3;
  string typ = 4;
  int32 amount = 5;
  string currency = 6;
  BoolPtr has_won = 7;
  google.protobuf.Timestamp created_at = 8;
  int32 amount_eur = 9;
  Player player = 10;
}
